[gd_scene load_steps=28 format=2]

[ext_resource path="res://scripts/HUD/StartHUD.gd" type="Script" id=1]
[ext_resource path="res://scenes/HUD/HUD_Leer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/PixelSplitter-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Fonts/dogicapixelbold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Music/Buttoms/select1.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Music/Buttoms/selec0.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Background/star_so_far.png" type="Texture" id=7]
[ext_resource path="res://Assets/Music/Background/DeepSpaceB.mp3" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.0823529, 0.866667, 0.368627, 0.870588 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxTexture" id=11]

[sub_resource type="StyleBoxTexture" id=12]

[sub_resource type="StyleBoxTexture" id=13]

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.0823529, 0.866667, 0.368627, 0.870588 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxTexture" id=10]

[sub_resource type="StyleBoxTexture" id=8]

[sub_resource type="StyleBoxTexture" id=9]

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.0823529, 0.866667, 0.368627, 0.870588 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxTexture" id=5]

[sub_resource type="StyleBoxTexture" id=20]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="DynamicFont" id=2]
size = 103
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.0823529, 0.866667, 0.368627, 0.870588 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxTexture" id=14]

[sub_resource type="StyleBoxTexture" id=15]

[sub_resource type="StyleBoxTexture" id=16]

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 3 )

[node name="StartHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1032.0
margin_bottom = 607.0
color = Color( 0, 0, 0, 1 )

[node name="Stars" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Stars"]
position = Vector2( 523, 318 )
motion_mirroring = Vector2( 0, 1100 )

[node name="Sprite" type="Sprite" parent="Stars/ParallaxLayer"]
scale = Vector2( 1.12476, 1.1499 )
texture = ExtResource( 7 )

[node name="Btn_Exit" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.5
margin_top = 433.0
margin_right = 143.5
margin_bottom = 483.0
custom_colors/font_color_focus = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_colors/font_color_hover = Color( 0.027451, 0.14902, 0.121569, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Salir"
__meta__ = {
"_editor_description_": ""
}

[node name="Btn_NewGame" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.5
margin_top = 333.0
margin_right = 143.5
margin_bottom = 383.0
custom_colors/font_color_focus = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_colors/font_color_hover = Color( 0.027451, 0.14902, 0.121569, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Nueva partida"
__meta__ = {
"_editor_description_": ""
}

[node name="Btn_Start" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.5
margin_top = 233.0
margin_right = 143.5
margin_bottom = 283.0
custom_colors/font_color_focus = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_colors/font_color_hover = Color( 0.027451, 0.14902, 0.121569, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 20 )
custom_styles/normal = SubResource( 4 )
text = "Continuar partida"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -509.5
margin_top = 30.0
margin_right = 509.5
margin_bottom = 121.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 2 )
text = "Shoot em up"
align = 1
uppercase = true

[node name="BtnLeer" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -60.0
margin_right = -12.0
margin_bottom = -10.0
custom_colors/font_color_focus = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_colors/font_color_hover = Color( 0.027451, 0.14902, 0.121569, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "Leer"
__meta__ = {
"_editor_description_": ""
}

[node name="PressButtom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="MouseButtom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="Start" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0
autoplay = true

[node name="MensajeNoGuardado" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -336.0
margin_top = -120.0
margin_right = 336.0
margin_bottom = -93.0
custom_colors/font_color = Color( 0.866667, 0.172549, 0.0823529, 1 )
custom_fonts/font = SubResource( 3 )
text = "NO EXISTE PARTIDA GUARDADA, CLICK EN NUEVA PARTIDA"

[node name="TimerMD" type="Timer" parent="."]
wait_time = 3.0

[node name="TimerExit" type="Timer" parent="."]
wait_time = 0.15

[node name="TimerLeer" type="Timer" parent="."]
wait_time = 5.0

[node name="HUD_Leer" parent="." instance=ExtResource( 2 )]

[connection signal="mouse_entered" from="Btn_Exit" to="." method="_on_Btn_Exit_mouse_entered"]
[connection signal="pressed" from="Btn_Exit" to="." method="_on_Btn_Exit_pressed"]
[connection signal="mouse_entered" from="Btn_NewGame" to="." method="_on_Btn_NewGame_mouse_entered"]
[connection signal="pressed" from="Btn_NewGame" to="." method="_on_Btn_NewGame_pressed"]
[connection signal="mouse_entered" from="Btn_Start" to="." method="_on_Btn_Start_mouse_entered"]
[connection signal="pressed" from="Btn_Start" to="." method="_on_Btn_Start_pressed"]
[connection signal="mouse_entered" from="BtnLeer" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="BtnLeer" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="TimerMD" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerExit" to="." method="_on_TimerExit_timeout"]
[connection signal="timeout" from="TimerLeer" to="." method="_on_TimerLeer_timeout"]
